Wed Aug 26 14:18:35 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c:
	- make check now works if configure was launched from another
	  directory

Wed Aug 26 14:16:00 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-dist.sh: test-dist now works with new configure script

Tue Aug 25 16:31:41 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild:
	- update DBD::ODBC test, fix for config.rpath required

Tue Aug 25 16:23:49 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/freebcp.txt doc/freetds.conf.5 doc/tds_ssl.html:
	* doc/userguide.sgml include/sybdb.h include/tds.h src/dblib/bcp.c:
	* src/dblib/dblib.c src/dblib/unittests/t0022.c src/pool/util.c:
	* src/server/login.c src/server/server.c src/server/unittest.c:
	* src/tds/bulk.c src/tds/config.c src/tds/login.c src/tds/mem.c:
	* src/tds/net.c src/tds/query.c src/tds/tds_checks.c:
	* src/tds/token.c src/tds/util.c win32/winsetup.c:
	- Use MS protocol version (7.1 for mssql2k and 7.2 for mssql2k5)

Fri Aug 21 12:10:57 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/token.c:
	- fix variant type for data converted to client encoding

Fri Aug 21 12:01:24 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- make ssl more threadsafe using pthread in libgcrypt if possible

Fri Aug 21 11:59:39 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- fix a problem with Interix (cfr
	  http://debian-interix.net/bugs/libs/)

Fri Aug 21 11:57:54 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: small optimization for method constant

Thu Aug 20 20:59:22 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/odbc/unittests/data.c:
	* src/tds/token.c:
	- fix N(VAR)CHAR inside variant

Thu Aug 20 19:52:58 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>